# RenameTool

./: .gitignore  .pylintrc  README.md  functions.py  main.py  pyproject.toml  requirements.txt  setup.py  test.py  video_file.py
.github/workflows/: push_workflow.yml  pylint.yml
rename_tool/: __init__.py  functions.py  main.py  video_file.py
tests/: test.py
