[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.black]
line-length = 120
exclude = '''
/(
      \.eggs
      | build
      | venv
      | \.venv
      | \.git
)/
'''

[project]
name = "RenameTool"
dynamic = ["version", "description", "license", "classifiers", "scripts", "authors", "urls", "dependencies", "optional-dependencies", "requires-python"]
readme = "README.md"